SAR Blai Sandbox/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ADOREA_Benalmadena__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADOREA Benalmádena</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADOREA_Girona__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADOREA Girona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADOREA_Sevilla__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ADOREA Sevilla</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaña</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>NOC__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBcg</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>NOC__c</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canal__c</fullName>
        <label>Canal</label>
        <picklist>
            <picklistValues>
                <fullName>Chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registro vía web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada recibida CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada emitida CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centro_de_procedencia__c</fullName>
        <label>Centro de procedencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Centro_residencial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Centro residencial / Central</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Centro</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_Recomendador__c</fullName>
        <label>Cliente Recomendador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacto_Recomendador__c</fullName>
        <label>Contacto Recomendador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detalle_medios_de_comunicacion__c</fullName>
        <label>Detalle medios de comunicación</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Subject=&apos;Email&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Empleado_recomendador__c</fullName>
        <label>Empleado recomendador</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entidad_Recomendadora__c</fullName>
        <label>Entidad Recomendadora</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsFromTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFromTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Llamada__c</fullName>
        <formula>Subject=&apos;Llamada&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Llamada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lugar_de_la_visita__c</fullName>
        <label>Lugar de la visita</label>
        <picklist>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lugar de residencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro Hospitalario</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medida_de_retencion__c</fullName>
        <label>Medida de retención</label>
        <picklist>
            <picklistValues>
                <fullName>15% dto.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CUM a precio de SUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opcion conviviente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Respiro familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensor gratis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tad movil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No se ofrece oferta especial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESENCIAL 1O!</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medios_de_comunicacion__c</fullName>
        <label>Medios de comunicación</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folletos y flyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzoneo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prensa escrita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Mailing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo__c</fullName>
        <label>Motivo</label>
        <picklist>
            <picklistValues>
                <fullName>No tiene custodia de llaves (Unidad Móvil)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precio del servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precio del dispositivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No sustituye al Móvil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Características del Servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No quiere contratar en este momento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No existe centro en la Zona</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo_intencion_de_baja__c</fullName>
        <label>Motivo intención de baja</label>
        <picklist>
            <picklistValues>
                <fullName>Empeoramiento titular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Familiar o cuidador contratado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usuario no usa el servicio.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usuario abandona domicilio habitual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No servicio de llaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio no se ajusta a sus necesidades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Empresa de la competencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fallecimiento de Titular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio publico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Motivo_no_interesado__c</fullName>
        <label>Motivo no interesado</label>
        <picklist>
            <picklistValues>
                <fullName>Acompañamiento de auxiliar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acompañamiento de familiar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contrata con competencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datos de contacto erróneos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fallecimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Falta de interés en contratar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingreso en centro residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingreso en hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contesta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No disponer servicio de llaves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precio del servicio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio no se adapta a sus necesidades</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servicio público</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usuario final rechaza servicio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Otro_profesional__c</fullName>
        <label>Otro profesional</label>
        <picklist>
            <picklistValues>
                <fullName>Trabajador social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Médicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisioterapeuta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Psicólogo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coordinador Enfermería/DUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terapeuta Ocupacional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitores de tiempo libre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responsables Servicios Hoteleros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asistente de dirección</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PB_Nueva_Tarea__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Permite identificar si la tarea se ha creado por primera vez, para ser editada solo 1 vez.</description>
        <label>(PB) Nueva Tarea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pagina_web__c</fullName>
        <label>Página web</label>
        <picklist>
            <picklistValues>
                <fullName>Infoelder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inforesidencias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Sarquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Te acompaña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Persona_de_Contacto__c</fullName>
        <inlineHelpText>Nombre y apellido de la persona de contacto en caso que no esté creado en SF</inlineHelpText>
        <label>Persona de Contacto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedencia__c</fullName>
        <label>Procedencia</label>
        <picklist>
            <picklistValues>
                <fullName>Prescriptor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colectivo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vecindad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Sarquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro Sarquavitae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medios de comunicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empleado Banca y Seguro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empleado Caja Madird</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empleado CAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empleado Ibercaja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trabajador Social SF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comisionista</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provincia_centro_s__c</fullName>
        <label>Provincia centro/s</label>
        <picklist>
            <picklistValues>
                <fullName>Álava</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albacete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alacant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Almería</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ávila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badajoz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illes Balears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burgos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cáceres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cádiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Castelló</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ciudad Real</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Córdoba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Coruña</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuenca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guadalajara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gipuzkoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huelva</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huesca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaén</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>León</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lleida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>La Rioja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lugo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Málaga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murcia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proximos_pasos__c</fullName>
        <label>Próximos pasos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurso__c</fullName>
        <label>Recurso</label>
        <picklist>
            <picklistValues>
                <fullName>SAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARDOMUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADOREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTROS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reinicio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reingreso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resultado__c</fullName>
        <label>Resultado</label>
        <picklist>
            <picklistValues>
                <fullName>Información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presupuesto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contrato TAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interesa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acción Abierta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acción Cerrada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contactado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No contactado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No interesado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enviar contrato</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SAD_Barcelona__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAD Barcelona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAD_resto_de_Espana__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAD resto de España</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SARDOMUS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SARDOMUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicio_TA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicio</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Servicio__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012110000000hiy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>Actividades</relationshipLabel>
        <relationshipName>Actividades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <picklist>
            <picklistValues>
                <fullName>SAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SARDOMUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADOREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTROS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subclasificacion__c</fullName>
        <label>Subclasificación</label>
        <picklist>
            <picklistValues>
                <fullName>Fijo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Móvil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periféricos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DÚO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtipo_TA__c</fullName>
        <label>Subtipo TA</label>
        <picklist>
            <controllingField>Tipo__c</controllingField>
            <picklistValues>
                <fullName>Primera llamada de información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Llamada de seguimiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envio de información</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendiente de decisión final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pendiente de cuestiones técnicas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmación de contratación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agradecimiento en Oportunidad derivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacto en Congresos, Jornadas y otros eventos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacto médico referencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Felicitación de Navidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitación a acto o jornada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail de acción promocional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recepción y atención llamada recibida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reenvío correo de agenda microsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento de Cliente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtipo__c</fullName>
        <label>Subtipo RES</label>
        <picklist>
            <controllingField>Tipo__c</controllingField>
            <picklistValues>
                <fullName>Agradecimiento en Oportunidad derivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charla en el centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmación de ingreso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmación Visita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultas del cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacto en Congresos, Jornadas y otros eventos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacto médico referencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enseñar Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Felicitación de Navidad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitación a acto o jornada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail de acción promocional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primera visita</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recepción y atención llamada recibida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reenvío correo de agenda microsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento ASR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento de caso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento de Cliente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitud información inicial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visita siguiente</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tarea__c</fullName>
        <formula>IF(RecordType.Name=&quot;Tarea Cliente&quot; || RecordType.Name=&quot;Tarea Personal&quot;  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tarea</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Identificación/Captación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelización</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_servicio__c</fullName>
        <label>Tipo de servicio</label>
        <picklist>
            <picklistValues>
                <fullName>Público</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Privado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visita__c</fullName>
        <formula>IF(RecordType.Name=&quot;Visita Cliente&quot;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visita</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zona_Comercial__c</fullName>
        <label>Zona Comercial</label>
        <picklist>
            <picklistValues>
                <fullName>Barcelona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Este</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mallorca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Navarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oeste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Occidental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sur Oriental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zaragoza</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Tarea__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Actividades de mi equipo</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Team</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tareas de hoy</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <columns>TASK.RECORDTYPE</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Próximos eventos</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>